<resources>
    <string name="app_name">GPS燃气巡检</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>

    <string name="login_title">Company\u0020\u0020LOGIN</string>
    <string name="first_title">GPS燃气巡检系统</string>
    <string name="login_button">登   录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="staff_id">员工账号</string>
    <string name="staff_password">密码</string>

    <string name="task">巡检任务</string>
    <string name="position">位置轨迹</string>
    <string name="fault">故障信息</string>
    <string name="notice">通知警报</string>
    <string name="notices">通知公告</string>
    <string name="history_route">历史巡检轨迹</string>

    <string name="undo">未完成</string>
    <string name="done">已完成</string>
    <string name="no_donetask">目前没有已完成的巡检表</string>

    <string name="region">巡检区域</string>
    <string name="regionname">1#机器</string>
    <string name="open_record">开始任务</string>
    <string name="qrcode_check">二维码检查</string>
    <string name="finish">完成</string>
    <string name="record">巡检记录表</string>

    <string name="search">搜索</string>
    <string name="input_device">录入</string>
    <string name="input_finish">结束</string>
    <string name="qrcode">二维码</string>
    <string name="qrcode_scan">二维码扫描</string>
    <string name="history">历史</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="device_id">标题（注明设备号）</string>
    <string name="time">时间</string>
    <string name="fault_pic">图片信息</string>
    <string name="fault_info">故障信息反馈单</string>
    <string name="submit">提交</string>
    
    <string name="notice_info">通知</string>
    <string name="announce_info">公告</string>
    <string name="help">一键\n呼救</string>
    <string name="no_notice">目前没有通知公告</string>
    <string name="task_type">常规</string>
    <string name="download">下载</string>
    <string name="examine">查看</string>

    <string name="user">用户</string>
    <string name="code">账号</string>
    <string name="branch_name">部门名称</string>
    <string name="branch_type">部门类型</string>
    <string name="company">公司</string>
    <string name="change_login_code">修改登录密码</string>

    <string name="change_code">修改密码</string>
    <string name="old_code">旧密码</string>
    <string name="new_code">新密码</string>
    <string name="new_code_again">再输一次新密码</string>
    <string name="finish_change">确认修改</string>

    <string name="choose_time">请选择时间点：</string>

    <string name="input_new_region">录入新区域/设备</string>
    <string name="choose_region">请选择站场/管线：</string>
    <string name="region_name">名称</string>
    <string name="region_intro">简介</string>
    <string name="finish_input">确认新建</string>

    <string name="note">备注</string>
    <string name="input_note">如有特殊情况，请说明</string>

    <string-array name="region">
        <item>石家庄压气站</item>
        <item>通州东站</item>
        <item>小卞庄站</item>
    </string-array>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="allrecord">已有巡检记录（近十天）</string>
    <string name="is_check">未审核</string>
    <string name="sub_time">提交时间</string>
    <string name="region_name2">区域/设备名称</string>
    <string name="error_num">异常数量</string>
    <string name="record_detail">巡检记录详情</string>


    <string name="record_region">区域/管线名称</string>
    <string name="record_shift">班次</string>
    <string name="record_time">时间</string>
    <string name="record_error">异常数量</string>
    <string name="record_start">开始时间</string>
    <string name="record_end">结束时间</string>
    <string name="record_sub">提交时间</string>
    <string name="record_check">审核时间</string>
    <string name="record_status">审核状态</string>
    <string name="record_comment">评论</string>
    <string name="record_gener">记录人</string>
    <string name="record_type">类型</string>

    <string name="input_region_name">请输入区域/设备名称</string>
    <string name="input_region_intro">请输入区域/设备简介</string>

    <string name="person_info">查看个人信息</string>
    <string name="close">关闭</string>

    <string name="choose_period">请选择巡检时间：</string>
    <string name="input_result">若无正确选项 请手动输入</string>

    <string name="check_content">巡检内容</string>
    <string name="check_record">巡检记录</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_mipca_activity_capture">MipcaActivityCapture</string>
    <string name="title_activity_region">RegionActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_change_code">ChangeCodeActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_record_detail">RecordDetailActivity</string>
</resources>
