<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    tools:context="com.cug.gpscheckgas.app.InputActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#36BBB1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/input_new_region"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/icon_back" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:background="@drawable/item_style">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_name"
                android:id="@+id/textView2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/regionName"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:textSize="15dp"
                android:textColor="#555555"
                android:textColorHint="#AAAAAA"
                android:hint="@string/input_region_name"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:background="@drawable/item_style">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_intro"
                android:id="@+id/textView3"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <EditText
                android:layout_width="220dp"
                android:layout_height="90dp"
                android:id="@+id/regionIntro"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="15dp"
                android:textColor="#555555"
                android:textColorHint="#AAAAAA"
                android:hint="@string/input_region_intro"/>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/finish_input"
            android:textColor="#ffffff"
            android:id="@+id/comfirm"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#FF9D09"/>
    </LinearLayout>
</LinearLayout>
