<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="110dp"
    android:background="@drawable/listview_style">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_time"
                android:textColor="#555555"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subTime"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="2016-4-8 16:00:00.0000"
                android:textColor="#555555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_name2"
                android:textColor="#555555"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/regionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/region_name2"
                android:textColor="#555555"
                android:textSize="15dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_num"
                android:textColor="#555555"
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/errorNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/error_num"
                android:textColor="#555555"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/check_type"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_normal"
        android:focusable="false"
        android:text="@string/is_check"
        android:textColor="#FF9D09" />

</RelativeLayout>
