<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cug.gpscheckgas.app.NoticeFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#36BBB1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/notices"
            android:textColor="#ffffff"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp">
        <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_marginTop="50dp">-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <ListView
            android:id="@+id/noticeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:divider="@null" />

        <TextView
            android:id="@+id/noNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/no_notice"
            android:textColor="#808080"
            android:textSize="20dp"
            android:visibility="gone" />
        <!--</LinearLayout>-->
        <Button
            android:id="@+id/alarm"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/help"
            android:textSize="12dp"
            android:textColor="#ffffff"
            android:background="@drawable/floatview_style"/>
    </RelativeLayout>
</FrameLayout>
